--- a/Gestion Tipo Campo/src/gestiontipocampo/resources/frameFormulario.properties
+++ b/Gestion Tipo Campo/src/gestiontipocampo/resources/frameFormulario.properties
@@ -83,8 +83,10 @@ botonMasAlto.text=Alto
 botonMenosAlto.text=Alto
 botonTabIndex.text=Modificar Orden de Tabulacion
 jButton3.toolTipText=Cerrar.
-jButton1.text=jButton1
+jButton1.text=Agregar Comando
 testFontSelect.Action.shortDescription=Prueba
 testFontSelect.Action.text=TestFontSelect
 jLabel35.text=Estilo:
 jLabel35.AccessibleContext.accessibleName=Estilo:
+crearComando.Action.shortDescription=
+crearComando.Action.text=Crear Comando
