Cambios minimos, el campo numero ya tiene formato predefinido.

--- a/Gestion Tipo Campo/src/gestiontipocampo/resources/frameFormulario.properties
+++ b/Gestion Tipo Campo/src/gestiontipocampo/resources/frameFormulario.properties
@@ -90,3 +90,4 @@ jLabel35.text=Estilo:
 jLabel35.AccessibleContext.accessibleName=Estilo:
 crearComando.Action.shortDescription=
 crearComando.Action.text=Crear Comando
+jFormattedTextField1.text=jFormattedTextField1
