--- a/Gestion Tipo Campo/src/gestiontipocampo/resources/frameComandos.properties
+++ b/Gestion Tipo Campo/src/gestiontipocampo/resources/frameComandos.properties
@@ -5,12 +5,11 @@ fieldDescripcion.text=
 labelSeleccionFormulario.text=Formulario en que se realiza la acci\u00F3n
 labelCampoInicial.text=Tipo de Campo
 labelCondicionInicial.text=Condici\u00F3n Inicial
-labelCondAccion.text=Condici\u00F3n de Acci\u00F3n
-labelCondicionInicial1.text=Condici\u00F3n Final
 labelCampoFinal.text=Tipo de Campo
-labelCondFinal.text=Efecto
-fieldAccion.text=
 botonAgregarAccion.text=Agregar Acci\u00F3n
 botonCancelar.text=Cancelar
 botonAceptar.text=Aceptar
 fieldNombre.text=
+jButton1.text=jButton1
+labelEfecto.text=Efecto
+textoPrevio.text=
